objects/Approval_Job_Task_Roles__c/Approval_Job_Task_Roles__c.object-meta.xml
<CustomObject>
    <label>Job Approval Step Role</label>
    <nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Approval Step Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>