objects/Approval_Job_Task_Roles__c/fields/Approval_Job_Task__c.field-meta.xml
<CustomField>
    <fullName>Approval_Job_Task__c</fullName>
    <label>Approval_Job_Task</label>
    <referenceTo>Approval_Job_Task__c</referenceTo>
    <relationshipName>Approval_Job_Task_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>