objects/Approval_Job_Task_Roles__c/fields/Approval_Task_Inprogress__c.field-meta.xml
<CustomField>
    <fullName>Approval_Task_Inprogress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to update the record when the job task status is in progress for the purpose of process builder.</description>
    <label>Approval Task Inprogress</label>
    <type>Checkbox</type>
</CustomField>